feat: Product model up as record and adapted